2009-03-03 Pierre Wieser <pwieser@trychlos.org>

	* po/POTFILES.in: Updated.

	Rename the NAIConditions interface to NAIContextConditions
	(hopefully, there will be a NAIContextParameters some day :)).

	* src/core/na-iconditions-factory.c:
	Renamed as src/core/na-icontext-conditions-factory.c.

	* src/core/na-iconditions.c:
	Renamed as src/core/na-icontext-conditions.c.

	* src/api/na-iconditions.h:
	Renamed as src/core/na-icontext-conditions.h.

	* src/api/Makefile.am:
	* src/core/Makefile.am: Updated accordingly.

	* src/core/na-object-profile.c:
	* src/plugin-menu/nautilus-actions.c:
	Use new na_icontext_conditions_is_candidate() function.

	Define the NAIConditions interface, to be implemented by actions,
	profiles and menus (for now, only profiles).

	* src/api/na-iconditions.h:
	* src/core/na-iconditions.c:
	* src/core/na-iconditions-factory.c: New files.

	* src/api/Makefile.am:
	* src/core/Makefile.am: Updated accordingly.

	* src/api/na-ifactory-object-data.h:
	Define the NA_FACTORY_CONDITIONS_GROUP data group.

	* src/core/na-object-profile-factory.c:
	Use new data_def_conditions.

	* src/core/na-object-profile.c (register_type):
	Implement the new NAIConditions interface.

	Review the rationales, replacing serializable+obsoleted by
	readable+writable flags in NADataDef structure.

	* src/api/na-data-def.h:
	* src/core/na-factory-object.c:
	* src/core/na-object-action-factory.c:
	* src/core/na-object-action.c:
	* src/core/na-object-id-factory.c:
	* src/core/na-object-item-factory.c:
	* src/core/na-object-profile-factory.c:
	* src/io-desktop/nadp-desktop-provider.c: Updated accordingly.

	* src/plugin-tracker/na-tracker-dbus.c (instance_dispose):
	Release selected items in instance_dispose() rather than in
	instance_finalize() which caused a FPE in Nautilus terminaison.

	* src/api/na-ifactory-object.h:
	* src/core/na-ifactory-object.c:
	* src/core/na-iio-provider.c:
	* src/io-desktop/nadp-desktop-file.c:
	* src/io-desktop/nadp-desktop-file.h: